--- a/package.json
+++ b/package.json
@@ -12,6 +12,11 @@
     "jquery": "^2.2.4"
   },
   "devDependencies": {
-    "gulp": "^3.9.1"
+    "browser-sync": "^2.12.10",
+    "gulp": "^3.9.1",
+    "gulp-imagemin": "^3.0.1",
+    "gulp-minify-css": "^1.2.4",
+    "gulp-sourcemaps": "^1.6.0",
+    "gulp-uglify": "^1.5.3"
   }
 }
