--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
   "devDependencies": {
     "browser-sync": "^2.12.10",
     "gulp": "^3.9.1",
+    "gulp-compile-handlebars": "^0.6.1",
     "gulp-imagemin": "^3.0.1",
     "gulp-minify-css": "^1.2.4",
+    "gulp-rename": "^1.2.2",
     "gulp-sourcemaps": "^1.6.0",
     "gulp-uglify": "^1.5.3"
   }
