--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "jquery": "^2.2.4",
-    "normalize.css": "^4.1.1"
+    "countdown": "^2.6.0",
+    "normalize.css": "^4.1.1",
+    "superagent": "^2.0.0"
   },
   "devDependencies": {
     "browser-sync": "^2.12.10",
+    "browserify": "^13.0.1",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.0",
     "gulp-compile-handlebars": "^0.6.1",
@@ -22,6 +24,8 @@
     "gulp-minify-css": "^1.2.4",
     "gulp-rename": "^1.2.2",
     "gulp-sourcemaps": "^1.6.0",
-    "gulp-uglify": "^1.5.3"
+    "gulp-uglify": "^1.5.3",
+    "vinyl-buffer": "^1.0.0",
+    "vinyl-source-stream": "^1.1.0"
   }
 }
