--- a/package.json
+++ b/package.json
@@ -17,14 +17,18 @@
     "browser-sync": "^2.12.10",
     "browserify": "^13.0.1",
     "gulp": "^3.9.1",
+    "gulp-a11y": "^0.1.1",
     "gulp-autoprefixer": "^3.1.0",
     "gulp-compile-handlebars": "^0.6.1",
     "gulp-imagemin": "^3.0.1",
+    "gulp-jshint": "^2.0.1",
     "gulp-less": "^3.1.0",
     "gulp-minify-css": "^1.2.4",
+    "gulp-mocha": "^2.2.0",
     "gulp-rename": "^1.2.2",
     "gulp-sourcemaps": "^1.6.0",
     "gulp-uglify": "^1.5.3",
+    "jshint": "^2.9.2",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0"
   }
